# skel3d

./: flatccubetop_test.py  geometry.py  graph.py  lfsgriddec.py  ma_util.py  map.py  poremap_test.py  region_growing.py  setup.py  sheeterator.py  sheeterator.ui  tools.ui  topostruct.py  topoview.py  view.py
Random3Dcity/: generate.sh  info.xml
Random3Dcity/1/CityGML/: LOD0_0.gml  LOD1_0_HMin.gml  (+9 more)
Random3Dcity/CityGML/: LOD0_0.gml  LOD0_1_F0_H3.gml  LOD0_2_F0_H3.gml  LOD0_3_F0_H3.gml  LOD1_0_HMin.gml  LOD1_1_F0_H3.gml  LOD1_2_F0_H3.gml  LOD1_3_F0_H3.gml  LOD2_0_F0.gml  LOD2_1_F0.gml  LOD2_2_F0.gml  LOD2_3_F0.gml  LOD3_0.gml  LOD3_1.gml  LOD3_2.gml  LOD3_3.gml  interior-LOD0.gml  interior-LOD1.gml  interior-LOD2_2.gml  interior-LOD2_3.gml
Random3Dcity/NPY/: compute_ma  coords.npy  ma_coords_in.npy  ma_coords_out.npy  ma_qidx_in.npy  ma_qidx_out.npy  ma_segment.npy  ma_segment_graph.pickle  normals.npy  seg_link_adj.npy  seg_link_flip.npy
l2norm/: CMakeLists.txt  CgalProcessor.cpp  main.cpp
mapy/: geom3d.py  graph.py  polyhedralise.py  segmentation.py
mapy/io/: las.py  npy.py  pcd.py  xyz.py
misc/: lfsgriddec.py
misc/l2norm/: CgalProcessor.h  CgalType.h
scripts/: cluster.py  coloriser.ui  cross.py  flatccubetop_test.py  mapview.py  poremap_rdam.py  poremap_test.py  segment.py  segment_bo.py  sheeterator.py  sheeterator.ui  tools.ui  topoview.py
scripts/io/: las2npy.py  npy2las.py  npy2pcd.py  pcd2npy.py  ply2npy.py
skel3d/: clustering.py  geom3d.py  graph.py  map.py  polyhedralise.py  segmentation.py  util.py
skel3d/io/: las.py  npy.py  ply.py  xyz.py
(+7 files in other folders)
